--- a/client/src/components/PageHeader/PageHeader.scss
+++ b/client/src/components/PageHeader/PageHeader.scss
@@ -3,4 +3,31 @@
   height: 8.5rem;
   padding: 0 1.5rem;
   padding-top: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  &__mode-select-container {
+    display: flex;
+    align-items: center;
+  }
+  &__mode-select {
+    width: 3rem;
+    height: 1.5rem;
+    background-color: white;
+    border-radius: 12px;
+    margin: 0 1rem;
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    border: none;
+    &:hover {
+      cursor: pointer;
+    }
+  }
+  &__mode-select-button {
+    width: 0.875rem;
+    height: 0.875rem;
+    border-radius: 50%;
+    background-color: #5964e0;
+  }
 }
