--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -6,7 +6,7 @@
     // background-color: $light-gray;
   }
   &__main-section {
-    padding: 0 1.5rem;
-    background-color: $light-gray;
+    // padding: 0 1.5rem;
+    // background-color: $light-gray;
   }
 }
