Change light-gray to light-grey, job list item styles

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -3,10 +3,10 @@
 .app {
   &__container {
     // padding: 0 1.5rem;
-    // background-color: $light-gray;
+    // background-color: $light-grey;
   }
   &__main-section {
     // padding: 0 1.5rem;
-    // background-color: $light-gray;
+    // background-color: $light-grey;
   }
 }
