--- a/client/src/pages/Home/Home.scss
+++ b/client/src/pages/Home/Home.scss
@@ -2,7 +2,6 @@
 
 .home {
   &__filter-container {
-    // width: 100%;
     height: 5rem;
     background-color: white;
     margin: 0 1.5rem;
@@ -11,6 +10,6 @@
   }
   &__job-list {
     padding: 0 1.5rem;
-    background-color: $light-gray;
+    background-color: $light-grey;
   }
 }
