Apply font to *

--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -1,3 +1,5 @@
+@import "./typography.scss";
+
 *,
 *::before,
 *::after {
@@ -6,4 +8,5 @@
   padding: 0;
   list-style: none;
   text-decoration: none;
+  font-family: "KumbhSans";
 }
