--- a/client/src/pages/Home/Home.scss
+++ b/client/src/pages/Home/Home.scss
@@ -4,6 +4,9 @@
   background-color: $light-grey;
   position: relative;
   padding: 0 1.5rem;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
   &__filter-container {
     height: 5rem;
     background-color: white;
@@ -52,5 +55,16 @@
   &__filter-icon-button-container {
     display: flex;
     align-items: center;
+  }
+  &__load-more-button {
+    width: 8.8125rem;
+    height: 3rem;
+    margin-top: 2rem;
+    border: none;
+    border-radius: 5px;
+    background-color: #5964e0;
+    font-weight: bold;
+    color: white;
+    margin-bottom: 3.875rem;
   }
 }
