--- a/client/src/pages/Home/Home.scss
+++ b/client/src/pages/Home/Home.scss
@@ -4,6 +4,7 @@
   background-color: $light-grey;
   position: relative;
   padding: 0 1.5rem;
+  display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
