--- a/client/src/pages/Home/Home.scss
+++ b/client/src/pages/Home/Home.scss
@@ -11,8 +11,6 @@
   &__filter-container {
     height: 5rem;
     background-color: white;
-    // margin: 0 1.5rem;
-    // margin-top: -2.5rem;
     border-radius: 6px;
     display: flex;
     justify-content: flex-start;
@@ -42,6 +40,8 @@
     align-items: center;
     margin-left: 1.5rem;
     border: none;
+    background-color: #5964e0;
+    border-radius: 5px;
   }
   &__search-icon {
     width: 1.75rem;
