--- a/client/src/pages/Home/Home.scss
+++ b/client/src/pages/Home/Home.scss
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
+  align-items: stretch;
   &__filter-container {
     height: 5rem;
     background-color: white;
@@ -67,5 +67,6 @@
     font-weight: bold;
     color: white;
     margin-bottom: 3.875rem;
+    align-self: center;
   }
 }
