--- a/client/src/pages/Home/Home.scss
+++ b/client/src/pages/Home/Home.scss
@@ -22,6 +22,7 @@
     padding: 1rem;
     padding-left: 1.5rem;
     width: auto;
+    z-index: 1;
   }
   &__job-list {
     background-color: $light-grey;
