--- a/client/src/components/SearchModal/SearchModal.scss
+++ b/client/src/components/SearchModal/SearchModal.scss
@@ -1,9 +1,12 @@
+@use "../../styles/variables.scss" as *;
+
 .search-modal {
-  margin: 1.5rem;
-  background-color: white;
-  width: 100%;
-  height: 20.4375rem;
-  border-radius: 6px;
+  &__form {
+    margin: 1.5rem;
+    background-color: white;
+    width: 100%;
+    border-radius: 6px;
+  }
   &__background {
     position: fixed;
     width: 100vw;
@@ -15,5 +18,55 @@
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+  &__location-filter-container {
+    border-bottom: 1px solid black;
+    display: flex;
+    align-items: center;
+    padding: 0 1.5rem;
+    height: 4.5rem;
+  }
+  &__location-filter-icon {
+    margin-right: 1rem;
+  }
+  &__location-filter-input {
+    border: none;
+    flex-grow: 1;
+    &:focus {
+      outline: none;
+    }
+  }
+  &__button {
+    background-color: #5964e0;
+    color: white;
+    font-weight: bold;
+    width: 100%;
+    height: 3rem;
+    border: none;
+    border-radius: 5px;
+    margin-top: 1.5rem;
+  }
+  &__button-full-time-container {
+    padding: 1.5rem;
+  }
+  &__contract-checkbox {
+    display: flex;
+    align-items: flex-start;
+    font-weight: bold;
+  }
+}
+
+input[type="checkbox"] {
+  appearance: none;
+  width: 1.5rem;
+  height: 1.5rem;
+  border-radius: 3px;
+  background-color: #efefef;
+  margin-right: 1rem;
+  &:hover {
+    cursor: pointer;
+  }
+  &:checked {
+    background-color: red;
   }
 }
