Details page styles

--- a/client/src/components/CompanyInfo/CompanyInfo.scss
+++ b/client/src/components/CompanyInfo/CompanyInfo.scss
@@ -8,6 +8,7 @@
     position: relative;
     padding-top: 3.0625rem;
     top: -1.5625rem;
+    margin-bottom: -1px;
     // justify-content: flex-start;
     // align-items: center;
     // position: absolute;
